# Telescope_GuiderV3

./: setup.sh
cameraController/: CMakeLists.txt  main.cpp
cameraController/inc/: cameraController.hpp  logger.hpp
cameraController/src/: logger.cpp
webServer/: index.html  package-lock.json  package.json  tailwind.config.ts
webServer/client/: global.css
webServer/client/pages/: Index.tsx
